<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical">
    <!--底部菜单-->
        <LinearLayout
            android:id="@+id/menu_btn_layout"
            android:layout_above="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/shake_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/popView_icon_size"
                    android:id="@+id/shake_btn"
                    android:background="@drawable/oval_yyl" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/shake" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rebelion_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    style="@style/popView_icon_size"
                    android:background="@drawable/oval_submit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rebelion" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scan_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    style="@style/popView_icon_size"
                    android:drawablePadding="10dp"
                    android:background="@drawable/oval_scan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan" />
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            style="@style/popView_icon_size"
            android:background="@drawable/oval_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>
</LinearLayout>
