<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/user_bg_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cancel_btn"
            style="@style/cancel_icon_size"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/longin_cancel_btn" />

        <ImageView
            android:id="@+id/user_img"
            style="@style/user_img_size"
            android:background="@drawable/user_icon_login_avatar_default" />

        <TextView
            android:id="@+id/title"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/user_img" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <RelativeLayout
                android:id="@+id/sina_login_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/other_login_btn"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sina_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_icon_button_login_weibo" />

                <TextView
                    android:id="@+id/sina_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textStyle"
                    android:layout_toRightOf="@+id/sina_img"
                    android:text="@string/sina_login" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <RelativeLayout
                android:id="@+id/tencent_login_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/other_login_btn">

                <ImageView
                    android:id="@+id/tencent_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_icon_button_login_tencent" />

                <TextView
                    android:id="@+id/tencent_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textStyle"
                    android:layout_toRightOf="@+id/tencent_img"
                    android:text="@string/tencentweibo_login" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <RelativeLayout
                android:id="@+id/wechat_login_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/other_login_btn"
                android:gravity="center">

                <ImageView
                    android:id="@+id/wechat_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_icon_button_login_weixin" />

                <TextView
                    android:id="@+id/wechat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textStyle"
                    android:layout_toRightOf="@+id/wechat_img"
                    android:text="@string/wechat_login" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <RelativeLayout
                android:id="@+id/QQ_login_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/other_login_btn">

                <ImageView
                    android:id="@+id/QQ_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_icon_button_login_qq" />

                <TextView
                    android:id="@+id/QQ_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textStyle"
                    android:layout_toRightOf="@+id/QQ_img"
                    android:text="@string/qq_login" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/phone_login_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/darkblue">

        <ImageView
            android:id="@+id/phone_img"
            style="@style/main_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/user_icon_button_login_phone" />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:text="@string/phone_login"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
